--- a/MainApp/MainApp.xcodeproj/xcshareddata/xcschemes/MainApp.xcscheme
+++ b/MainApp/MainApp.xcodeproj/xcshareddata/xcschemes/MainApp.xcscheme
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "dragDropExample.app"
+               BuildableName = "MainApp.app"
                BlueprintName = "MainApp"
                ReferencedContainer = "container:MainApp.xcodeproj">
             </BuildableReference>
@@ -32,7 +32,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "dragDropExample.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
@@ -50,7 +50,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "dragDropExample.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
@@ -68,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "dragDropExample.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
