--- a/fourAudioInputsTesting/audioInputExample.xcodeproj/xcshareddata/xcschemes/audioInputExample.xcscheme
+++ b/fourAudioInputsTesting/audioInputExample.xcodeproj/xcshareddata/xcschemes/audioInputExample.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   version = "1.3">
+   version = "1.8">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "audioInputExample.app"
+               BuildableName = "audioInputExampleDebug.app"
                BlueprintName = "audioInputExample"
                ReferencedContainer = "container:audioInputExample.xcodeproj">
             </BuildableReference>
@@ -32,7 +32,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "audioInputExample.app"
+            BuildableName = "audioInputExampleDebug.app"
             BlueprintName = "audioInputExample"
             ReferencedContainer = "container:audioInputExample.xcodeproj">
          </BuildableReference>
@@ -50,7 +50,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "audioInputExample.app"
+            BuildableName = "audioInputExampleDebug.app"
             BlueprintName = "audioInputExample"
             ReferencedContainer = "container:audioInputExample.xcodeproj">
          </BuildableReference>
@@ -68,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "audioInputExample.app"
+            BuildableName = "audioInputExampleDebug.app"
             BlueprintName = "audioInputExample"
             ReferencedContainer = "container:audioInputExample.xcodeproj">
          </BuildableReference>
