--- a/MainApp/MainApp.xcodeproj/xcshareddata/xcschemes/MainApp.xcscheme
+++ b/MainApp/MainApp.xcodeproj/xcshareddata/xcschemes/MainApp.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   version = "1.8">
+   version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -14,7 +14,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-               BuildableName = "MainAppDebug.app"
+               BuildableName = "MainApp.app"
                BlueprintName = "MainApp"
                ReferencedContainer = "container:MainApp.xcodeproj">
             </BuildableReference>
@@ -25,14 +25,14 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.GDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.GDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
-      buildConfiguration = "Debug">
+      buildConfiguration = "Release">
       <Testables>
       </Testables>
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "MainAppDebug.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
@@ -50,7 +50,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "MainAppDebug.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
@@ -68,7 +68,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "E4B69B5A0A3A1756003C02F2"
-            BuildableName = "MainAppDebug.app"
+            BuildableName = "MainApp.app"
             BlueprintName = "MainApp"
             ReferencedContainer = "container:MainApp.xcodeproj">
          </BuildableReference>
